--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			
 			function signUp() {
 				alert("Sign Up button clicked!");
-				window.location.href = "Signup.html";
+				window.location.href = "signup.html";
 			}
 			
 			
