--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div id="sti-logo"></div>
 		
-		<form action="/next_page.php">
+		<form>
 			<label for="name">Name</label>
 			<input type="text" id="name" name="studentname" placeholder="LAST NAME, First Name M.I.">
 			
