--- a/uniform.html
+++ b/uniform.html
@@ -130,11 +130,7 @@
 			}
 		</style>
 		
-		<script>
-			function uniformReserve() {
-				alert("hey bbygirl");
-			}
-		</script>
+		<script src="costing.js"></script>
 	</head>
 	
     <body>
@@ -147,8 +143,12 @@
 		<table>
             <tr>
                 <td><div class="image-box"><img src="https://cdn.discordapp.com/attachments/1155143207181619262/1184178999472181300/Untitled20_20231213010421.png" alt="Image 1" title="Male Uniform"></div></td>
-                <td><div class="image-box"><img src="https://cdn.discordapp.com/attachments/1155143207181619262/1184179662994284584/Untitled20_20231213010543.png" alt="Image 2" title="Female Uniform">
-				</div></td>
+                <td><div class="image-box"><img src="https://cdn.discordapp.com/attachments/1155143207181619262/1184179662994284584/Untitled20_20231213010543.png" alt="Image 2" title="Female Uniform"></div></td>
+			</tr>
+			<tr>
+				<td><script type="text/javascript">document.write(Mcost)</script></td>
+				<td><script type="text/javascript">document.write(FMcost)</script></td>
+			</tr>
 			</table>
 			
 			<h2 style="text-align: center;">Select:</h2>
