--- a/seniorhigh-male.html
+++ b/seniorhigh-male.html
@@ -302,7 +302,7 @@
 				<tr>
 					<td>
 						<a href="product_details.html"></a>
-						<div class="image-box"><img src="https://i.ibb.co/vDQxSDk/shs-male-top.png" alt="Image 1" title="White polo and vest"></div>
+						<div class="image-box"><img src="https://media.discordapp.net/attachments/1155143207181619262/1195080353812074626/Untitled24_20240112025903.png" alt="Image 1" title="PE Shirt"></div>
 						<div class="caption cntr">
 							<p> <input type="checkbox" id="shs-m-peshirt-small" name="shs-m-peshirt-small" value="SHS Male PeShirt">PE Shirt (XS-2XL)</p>
 							<p><strong>175.00</strong></p>
@@ -316,7 +316,7 @@
 					
 					<!-- pe pants-->
 					<td>
-						<div class="image-box"><img src="https://i.ibb.co/n6mp3V1/shs-male-bottom.png" alt="Image 2" title="Dark blue slacks"></div>
+						<div class="image-box"><img src="https://media.discordapp.net/attachments/1155143207181619262/1195080353300357120/Untitled24_20240112030224.png" alt="Image 2" title="PE Pants"></div>
 						<div class="caption cntr">
 							<p><input type="checkbox" id="shs-m-pepants-small" name="shs-m-pepanta-small" value="SHS Male PE Pants">PE Pants (S-M)</p>
 							<p><strong>405.00</strong></p>
@@ -332,6 +332,7 @@
 				<!--pe shirt-->
 				<tr>
 					<td>
+						<div class="image-box"><img src="https://media.discordapp.net/attachments/1155143207181619262/1195080353812074626/Untitled24_20240112025903.png" alt="Image 1" title="PE Shirt"></div>
 						<div class="caption cntr">
 							<p> <input type="checkbox" id="shs-m-medpeshirt-small" name="shs-m-medpeshirt-small" value="SHS Male medPeShirt">PE Shirt (3XL-5XL)</p>
 							<p><strong>200.00</strong></p>
@@ -344,6 +345,7 @@
 					</td>
 					<!-- pe pants-->
 					<td>
+						<div class="image-box"><img src="https://media.discordapp.net/attachments/1155143207181619262/1195080353300357120/Untitled24_20240112030224.png" alt="Image 2" title="PE Pants"></div>
 						<div class="caption cntr">
 							<p><input type="checkbox" id="shs-m-medpepants-small" name="shs-m-medpepanta-small" value="SHS Male med PE Pants">PE Pants (5XL)</p>
 							<p><strong>415.00</strong></p>
