--- a/seniorhigh-female.html
+++ b/seniorhigh-female.html
@@ -219,6 +219,7 @@
 				</tr>
 				<tr>
 					<td>
+						<div class="image-box"><img src="https://i.ibb.co/4R5dQ0S/shs-female-top.png" alt="Image 1" title="White blouse and vest"></div>
 						<div class="caption cntr">
 							<p><input type="checkbox" id="shs-f-blouse-medium" name="shs-f-blouse-medium" value="SHS Female Blouse">White blouse and vest (4XL-7XL)</p>
 							<p><strong>910.00</strong></p>
@@ -269,7 +270,7 @@
             <tr>
                 <td>
                     <a href="product_details.html"></a>
-                    <div class="image-box"><img src="https://i.ibb.co/vDQxSDk/shs-male-top.png" alt="Image 1" title="White polo and vest"></div>
+                    <div class="image-box"><img src="https://media.discordapp.net/attachments/1155143207181619262/1195080353812074626/Untitled24_20240112025903.png" alt="Image 1" title="PE Shirt"></div>
                     <div class="caption cntr">
                         <p> <input type="checkbox" id="shs-m-peshirt-small" name="shs-m-peshirt-small" value="SHS Male PeShirt">PE Shirt (XS-2XL)</p>
                         <p><strong>175.00</strong></p>
